[project]
name = "repl-nix-polymapcreator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "requests",
    "flask-login>=0.6.3",
    "flask-migrate>=4.0.7",
    "flask>=2.2.5",
    "authlib",
]
